# Kamea

./: .gitignore  AXIOM_PROMPT.md  CLAIMS.md  DistinctionStructures.lean  Kamea.lean  README.md  RUST_PROMPT.md  TOWER_PROMPT.md  axiom_irredundancy_test.py  axiom_mutation_test.py  bench_c_interop.py  composition_forces_kripke_test.py  counterexample_search.py  delta2_74181_blackbox.py  delta2_true_blackbox.py  ds_repl.py  find_d_without_s.py  find_n6_witness.py  find_nontrivial_necessity.py  find_structural_s_not_h.py  gen_lean74181.py  gnn_fingerprint.py  h_characterization_final.py  h_characterization_investigation.py  h_characterization_refined.py  h_characterization_sat.py  h_characterization_targeted.py  independence_results.py  interpretability_benchmark.md  kamea.py  kamea_blackbox.py  lakefile.lean  minimal_sdh_test.py  psi_blackbox.py  psi_lisp.py  psi_repl.py  psi_runtime.h  psi_runtime.rs  psi_runtime_c.h  psi_runtime_f.rs  (+8 more)
DistinctionStructures/: AntiDegeneracyTweaks.lean  BaseAxiomDerivation.lean  BasePlusA7Derivation.lean  CatActualityIrreducibility.lean  CatDiscoverable.lean  CatForcedDistinctness.lean  CatKleeneWall.lean  CatKleeneWallMinimal.lean  CatKripkeWall.lean  CatKripkeWallMinimal.lean  CatRigidity.lean  CatWitness.lean  CategoricalFoundation.lean  Delta1RoleDerivation.lean  Discoverable74181.lean  DiscoverableKamea.lean  FullAbstractAxiomGap.lean  NoCommutativity.lean  OntologicalDerivation.lean  OntologicalMinimality.lean  OntologicalSchema.lean  Psi16.lean  Psi16C.lean  Psi16Discoverable.lean  Psi16Full.lean  Psi16Rigidity.lean  SHEAF_SUMMARY.md  (+5 more)
(+294 files in other folders)
