[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "lark>=1.1.0",
    "colorama>=0.4.6",
    "textual>=8.0.0",
    "rich>=14.3.3",
]
